--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dmitriy Tkach <dmitriy.tka4@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   },
